; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hpeldsp_msa.c_common_hv_bil_and_aver_dst_8w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hpeldsp_msa.c_common_hv_bil_and_aver_dst_8w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_32__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32)* @common_hv_bil_and_aver_dst_8w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @common_hv_bil_and_aver_dst_8w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_32__, align 4
  %13 = alloca %struct.TYPE_32__, align 4
  %14 = alloca %struct.TYPE_32__, align 4
  %15 = alloca %struct.TYPE_32__, align 4
  %16 = alloca %struct.TYPE_32__, align 4
  %17 = alloca %struct.TYPE_32__, align 4
  %18 = alloca %struct.TYPE_32__, align 4
  %19 = alloca %struct.TYPE_32__, align 4
  %20 = alloca %struct.TYPE_32__, align 4
  %21 = alloca %struct.TYPE_32__, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca %struct.TYPE_32__, align 4
  %41 = alloca %struct.TYPE_32__, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %42 = bitcast %struct.TYPE_32__* %40 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %42, i8 0, i64 4, i1 false)
  %43 = load i32*, i32** %6, align 8
  %44 = call i32 @LD_SB(i32* %43)
  %45 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %41, i32 0, i32 0
  store i32 %44, i32* %45, align 4
  %46 = bitcast %struct.TYPE_32__* %12 to i8*
  %47 = bitcast %struct.TYPE_32__* %41 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %46, i8* align 4 %47, i64 4, i1 false)
  %48 = load i32, i32* %7, align 4
  %49 = load i32*, i32** %6, align 8
  %50 = sext i32 %48 to i64
  %51 = getelementptr inbounds i32, i32* %49, i64 %50
  store i32* %51, i32** %6, align 8
  %52 = load i32, i32* %10, align 4
  %53 = ashr i32 %52, 2
  store i32 %53, i32* %11, align 4
  br label %54

54:                                               ; preds = %58, %5
  %55 = load i32, i32* %11, align 4
  %56 = add nsw i32 %55, -1
  store i32 %56, i32* %11, align 4
  %57 = icmp ne i32 %55, 0
  br i1 %57, label %58, label %189

58:                                               ; preds = %54
  %59 = load i32*, i32** %6, align 8
  %60 = load i32, i32* %7, align 4
  %61 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %13, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %14, i32 0, i32 0
  %64 = load i32, i32* %63, align 4
  %65 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %15, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  %67 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %16, i32 0, i32 0
  %68 = load i32, i32* %67, align 4
  %69 = call i32 @LD_SB4(i32* %59, i32 %60, i32 %62, i32 %64, i32 %66, i32 %68)
  %70 = load i32, i32* %7, align 4
  %71 = mul nsw i32 4, %70
  %72 = load i32*, i32** %6, align 8
  %73 = sext i32 %71 to i64
  %74 = getelementptr inbounds i32, i32* %72, i64 %73
  store i32* %74, i32** %6, align 8
  %75 = load i32*, i32** %8, align 8
  %76 = load i32, i32* %9, align 4
  %77 = load i32, i32* %22, align 4
  %78 = load i32, i32* %23, align 4
  %79 = load i32, i32* %24, align 4
  %80 = load i32, i32* %25, align 4
  %81 = call i32 @LD_UB4(i32* %75, i32 %76, i32 %77, i32 %78, i32 %79, i32 %80)
  %82 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %40, i32 0, i32 0
  %83 = load i32, i32* %82, align 4
  %84 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %12, i32 0, i32 0
  %85 = load i32, i32* %84, align 4
  %86 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %40, i32 0, i32 0
  %87 = load i32, i32* %86, align 4
  %88 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %13, i32 0, i32 0
  %89 = load i32, i32* %88, align 4
  %90 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %40, i32 0, i32 0
  %91 = load i32, i32* %90, align 4
  %92 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %14, i32 0, i32 0
  %93 = load i32, i32* %92, align 4
  %94 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %17, i32 0, i32 0
  %95 = load i32, i32* %94, align 4
  %96 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %18, i32 0, i32 0
  %97 = load i32, i32* %96, align 4
  %98 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %19, i32 0, i32 0
  %99 = load i32, i32* %98, align 4
  %100 = call i32 @SLDI_B3_SB(i32 %83, i32 %85, i32 %87, i32 %89, i32 %91, i32 %93, i32 1, i32 %95, i32 %97, i32 %99)
  %101 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %40, i32 0, i32 0
  %102 = load i32, i32* %101, align 4
  %103 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %15, i32 0, i32 0
  %104 = load i32, i32* %103, align 4
  %105 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %40, i32 0, i32 0
  %106 = load i32, i32* %105, align 4
  %107 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %16, i32 0, i32 0
  %108 = load i32, i32* %107, align 4
  %109 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %20, i32 0, i32 0
  %110 = load i32, i32* %109, align 4
  %111 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %21, i32 0, i32 0
  %112 = load i32, i32* %111, align 4
  %113 = call i32 @SLDI_B2_SB(i32 %102, i32 %104, i32 %106, i32 %108, i32 1, i32 %110, i32 %112)
  %114 = load i32, i32* %26, align 4
  %115 = load i32, i32* %27, align 4
  %116 = load i32, i32* %28, align 4
  %117 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %17, i32 0, i32 0
  %118 = load i32, i32* %117, align 4
  %119 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %12, i32 0, i32 0
  %120 = load i32, i32* %119, align 4
  %121 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %18, i32 0, i32 0
  %122 = load i32, i32* %121, align 4
  %123 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %13, i32 0, i32 0
  %124 = load i32, i32* %123, align 4
  %125 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %19, i32 0, i32 0
  %126 = load i32, i32* %125, align 4
  %127 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %14, i32 0, i32 0
  %128 = load i32, i32* %127, align 4
  %129 = call i32 @ILVR_B3_UB(i32 %118, i32 %120, i32 %122, i32 %124, i32 %126, i32 %128, i32 %114, i32 %115, i32 %116)
  %130 = load i32, i32* %29, align 4
  %131 = load i32, i32* %30, align 4
  %132 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %20, i32 0, i32 0
  %133 = load i32, i32* %132, align 4
  %134 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %15, i32 0, i32 0
  %135 = load i32, i32* %134, align 4
  %136 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %21, i32 0, i32 0
  %137 = load i32, i32* %136, align 4
  %138 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %16, i32 0, i32 0
  %139 = load i32, i32* %138, align 4
  %140 = call i32 @ILVR_B2_UB(i32 %133, i32 %135, i32 %137, i32 %139, i32 %130, i32 %131)
  %141 = load i32, i32* %26, align 4
  %142 = load i32, i32* %27, align 4
  %143 = load i32, i32* %28, align 4
  %144 = load i32, i32* %31, align 4
  %145 = load i32, i32* %32, align 4
  %146 = load i32, i32* %33, align 4
  %147 = call i32 @HADD_UB3_UH(i32 %141, i32 %142, i32 %143, i32 %144, i32 %145, i32 %146)
  %148 = load i32, i32* %29, align 4
  %149 = load i32, i32* %30, align 4
  %150 = load i32, i32* %34, align 4
  %151 = load i32, i32* %35, align 4
  %152 = call i32 @HADD_UB2_UH(i32 %148, i32 %149, i32 %150, i32 %151)
  %153 = load i32, i32* %31, align 4
  %154 = load i32, i32* %32, align 4
  %155 = load i32, i32* %32, align 4
  %156 = load i32, i32* %33, align 4
  %157 = load i32, i32* %33, align 4
  %158 = load i32, i32* %34, align 4
  %159 = load i32, i32* %34, align 4
  %160 = load i32, i32* %35, align 4
  %161 = load i32, i32* %36, align 4
  %162 = load i32, i32* %37, align 4
  %163 = load i32, i32* %38, align 4
  %164 = load i32, i32* %39, align 4
  %165 = call i32 @ADD4(i32 %153, i32 %154, i32 %155, i32 %156, i32 %157, i32 %158, i32 %159, i32 %160, i32 %161, i32 %162, i32 %163, i32 %164)
  %166 = load i32, i32* %36, align 4
  %167 = load i32, i32* %37, align 4
  %168 = load i32, i32* %38, align 4
  %169 = load i32, i32* %39, align 4
  %170 = call i32 @SRARI_H4_UH(i32 %166, i32 %167, i32 %168, i32 %169, i32 2)
  %171 = load i32, i32* %36, align 4
  %172 = load i32, i32* %22, align 4
  %173 = load i32, i32* %37, align 4
  %174 = load i32, i32* %23, align 4
  %175 = load i32, i32* %38, align 4
  %176 = load i32, i32* %24, align 4
  %177 = load i32, i32* %39, align 4
  %178 = load i32, i32* %25, align 4
  %179 = load i32*, i32** %8, align 8
  %180 = load i32, i32* %9, align 4
  %181 = call i32 @PCKEV_AVG_ST8x4_UB(i32 %171, i32 %172, i32 %173, i32 %174, i32 %175, i32 %176, i32 %177, i32 %178, i32* %179, i32 %180)
  %182 = load i32, i32* %9, align 4
  %183 = mul nsw i32 4, %182
  %184 = load i32*, i32** %8, align 8
  %185 = sext i32 %183 to i64
  %186 = getelementptr inbounds i32, i32* %184, i64 %185
  store i32* %186, i32** %8, align 8
  %187 = bitcast %struct.TYPE_32__* %12 to i8*
  %188 = bitcast %struct.TYPE_32__* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %187, i8* align 4 %188, i64 4, i1 false)
  br label %54

189:                                              ; preds = %54
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @LD_SB(i32*) #2

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @LD_SB4(i32*, i32, i32, i32, i32, i32) #2

declare dso_local i32 @LD_UB4(i32*, i32, i32, i32, i32, i32) #2

declare dso_local i32 @SLDI_B3_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @SLDI_B2_SB(i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ILVR_B3_UB(i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ILVR_B2_UB(i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @HADD_UB3_UH(i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @HADD_UB2_UH(i32, i32, i32, i32) #2

declare dso_local i32 @ADD4(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @SRARI_H4_UH(i32, i32, i32, i32, i32) #2

declare dso_local i32 @PCKEV_AVG_ST8x4_UB(i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
